# jobsearch.ai

./: .gitignore  README.md
api/: .gitignore  alembic.ini  config.ini.example  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: da1896c2f58d_initial_schema_with_companycache_table.py
api/app/: __init__.py  config.py
api/app/db/: __init__.py  models.py  session.py
api/app/models/: __init__.py  company.py  config.py  display.py  job.py  provider.py
api/app/providers/: __init__.py  discovery.py
api/tests/: conftest.py
api/tests/mock_provider/: example.json  mock_jobsearch_provider.py
api/tests/unit/: __init__.py  test_db.py  test_models.py  test_setup.py
docs/core/: DESIGN_GUIDANCE.md  FLEX.md  README.md  UX_FLOW.md
docs/implementation/: PLAN.md  PLAN_OVERVIEW.md
